--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,116 +5,114 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇸🇬 新加坡-2.60MB/s(Youtube:不良林), server: sg-04.licom.ml, port: 8443, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: sg-04.licom.ml, skip-cert-verify: true}
-  - {name: 🇸🇬 新加坡-2.94MB/s(Youtube:不良林), server: s4.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s4.hazz.win, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-354.1KB/s(Youtube:不良林), server: best01.downloadmovie.cn, port: 65070, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best01.downloadmovie.cn}}
-  - {name: 🇺🇸 美国-1.07MB/s(Youtube:不良林), server: 38.68.135.18, port: 8090, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
+  - {name: 🇨🇳 中国-10.26MB/s(Youtube:不良林), server: 116.129.254.177, port: 65037, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
+  - {name: 🇨🇳 中国-1.01MB/s(Youtube:不良林), server: best04.downloadmovie.cn, port: 65078, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best04.downloadmovie.cn}}
+  - {name: 🇨🇳 中国-575.8KB/s(Youtube:不良林), server: in-jp-1.iivvppnn.info, port: 38301, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-jp-1.iivvppnn.info}}
   - {name: 🇦🇺 澳大利亚-2.65MB/s(Youtube:不良林), server: 185.167.116.250, port: 9019, type: ss, cipher: aes-256-cfb, password: GA9KzeEgvfxNrgmM}
-  - {name: 🇨🇦 加拿大-1.08MB/s(Youtube:不良林), server: 196.247.59.154, port: 801, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 塞浦路斯-1.54MB/s(Youtube:不良林), server: 213.169.137.221, port: 989, type: ss, cipher: aes-256-cfb, password: f8f7aCzcPKbsF8p3}
-  - {name: 🇫🇷 法国-1.12MB/s(Youtube:不良林), server: 195.154.200.150, port: 2376, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
-  - {name: 🇭🇰 香港-1.89MB/s(Youtube:不良林), server: azgy001.xiba1.xyz, port: 20711, type: trojan, password: 7497242f-3044-3c77-bf48-14bb26c92a83, sni: azgy001.xiba1.xyz, skip-cert-verify: true}
-  - {name: 🇭🇰 香港-705.9KB/s(Youtube:不良林), server: azgy001.xiba1.xyz, port: 20710, type: trojan, password: 7497242f-3044-3c77-bf48-14bb26c92a83, sni: azgy001.xiba1.xyz, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-3.55MB/s(Youtube:不良林), server: 85.208.108.20, port: 5601, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇯🇵 日本-3.47MB/s(Youtube:不良林), server: 85.208.108.20, port: 6379, type: ss, cipher: aes-256-gcm, password: zDNVedRFPQexG9v}
+  - {name: 波兰-471.0KB/s(Youtube:不良林), server: 217.30.10.67, port: 9056, type: ss, cipher: aes-256-cfb, password: rNBfNuuANFCAk7KB}
+  - {name: 🇺🇸 美国-2.47MB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇺🇸 美国-1.32MB/s(Youtube:不良林), server: 5.188.0.151, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇺🇸 美国-1.73MB/s(Youtube:不良林), server: 92.38.176.81, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇸🇬 新加坡-2.60MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.94MB/s(Youtube:不良林)
-      - 🇨🇳 中国-354.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.07MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.26MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.01MB/s(Youtube:不良林)
+      - 🇨🇳 中国-575.8KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.65MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.08MB/s(Youtube:不良林)
-      - 塞浦路斯-1.54MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.12MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.89MB/s(Youtube:不良林)
-      - 🇭🇰 香港-705.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.55MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.47MB/s(Youtube:不良林)
+      - 波兰-471.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.47MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.32MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.73MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇸🇬 新加坡-2.60MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.94MB/s(Youtube:不良林)
-      - 🇨🇳 中国-354.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.07MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.26MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.01MB/s(Youtube:不良林)
+      - 🇨🇳 中国-575.8KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.65MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.08MB/s(Youtube:不良林)
-      - 塞浦路斯-1.54MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.12MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.89MB/s(Youtube:不良林)
-      - 🇭🇰 香港-705.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.55MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.47MB/s(Youtube:不良林)
+      - 波兰-471.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.47MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.32MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.73MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇸🇬 新加坡-2.60MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.94MB/s(Youtube:不良林)
-      - 🇨🇳 中国-354.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.07MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.26MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.01MB/s(Youtube:不良林)
+      - 🇨🇳 中国-575.8KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.65MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.08MB/s(Youtube:不良林)
-      - 塞浦路斯-1.54MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.12MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.89MB/s(Youtube:不良林)
-      - 🇭🇰 香港-705.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.55MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.47MB/s(Youtube:不良林)
+      - 波兰-471.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.47MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.32MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.73MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-1.89MB/s(Youtube:不良林)
-      - 🇭🇰 香港-705.9KB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇸🇬 新加坡-2.60MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.94MB/s(Youtube:不良林)
-      - 🇨🇳 中国-354.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.07MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.26MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.01MB/s(Youtube:不良林)
+      - 🇨🇳 中国-575.8KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.65MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.08MB/s(Youtube:不良林)
-      - 塞浦路斯-1.54MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.12MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.89MB/s(Youtube:不良林)
-      - 🇭🇰 香港-705.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.55MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.47MB/s(Youtube:不良林)
+      - 波兰-471.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.47MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.32MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.73MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇸🇬 新加坡-2.60MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.94MB/s(Youtube:不良林)
-      - 🇨🇳 中国-354.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.07MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.26MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.01MB/s(Youtube:不良林)
+      - 🇨🇳 中国-575.8KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.65MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.08MB/s(Youtube:不良林)
-      - 塞浦路斯-1.54MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.12MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.89MB/s(Youtube:不良林)
-      - 🇭🇰 香港-705.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.55MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.47MB/s(Youtube:不良林)
+      - 波兰-471.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.47MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.32MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.73MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇸🇬 新加坡-2.60MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.94MB/s(Youtube:不良林)
-      - 🇨🇳 中国-354.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.07MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.26MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.01MB/s(Youtube:不良林)
+      - 🇨🇳 中国-575.8KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.65MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.08MB/s(Youtube:不良林)
-      - 塞浦路斯-1.54MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.12MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.89MB/s(Youtube:不良林)
-      - 🇭🇰 香港-705.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.55MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.47MB/s(Youtube:不良林)
+      - 波兰-471.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.47MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.32MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.73MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -130,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇸🇬 新加坡-2.60MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.94MB/s(Youtube:不良林)
-      - 🇨🇳 中国-354.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.07MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.26MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.01MB/s(Youtube:不良林)
+      - 🇨🇳 中国-575.8KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.65MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.08MB/s(Youtube:不良林)
-      - 塞浦路斯-1.54MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.12MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.89MB/s(Youtube:不良林)
-      - 🇭🇰 香港-705.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.55MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.47MB/s(Youtube:不良林)
+      - 波兰-471.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.47MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.32MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.73MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
