--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-10.26MB/s(Youtube:不良林), server: 116.129.254.177, port: 65037, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
-  - {name: 🇨🇳 中国-1.01MB/s(Youtube:不良林), server: best04.downloadmovie.cn, port: 65078, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best04.downloadmovie.cn}}
-  - {name: 🇨🇳 中国-575.8KB/s(Youtube:不良林), server: in-jp-1.iivvppnn.info, port: 38301, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-jp-1.iivvppnn.info}}
-  - {name: 🇦🇺 澳大利亚-2.65MB/s(Youtube:不良林), server: 185.167.116.250, port: 9019, type: ss, cipher: aes-256-cfb, password: GA9KzeEgvfxNrgmM}
-  - {name: 🇯🇵 日本-3.55MB/s(Youtube:不良林), server: 85.208.108.20, port: 5601, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇺🇸 美国-3.46MB/s(Youtube:不良林), server: jgwdb2.gaox.ml, port: 443, type: trojan, password: c19d1432-8b3e-4818-8837-3d160cf65908, sni: jgwdb2.gaox.ml, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-231.1KB/s(Youtube:不良林), server: ingress-i1.onebox6.org, port: 38106, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: ingress-i1.onebox6.org}}
+  - {name: 🇸🇬 新加坡-2.44MB/s(Youtube:不良林), server: trojan3.udpgw.com, port: 443, type: trojan, password: 8db1b560-019d-11ed-8bdf-1239d0255272, sni: trojan3.udpgw.com, skip-cert-verify: true}
+  - {name: 🇭🇰 (已存活7天)香港-4.26MB/s(Youtube:不良林), server: 47.243.31.8, port: 51657, type: vmess, uuid: f0eb8855-d3a4-4fc4-98b6-711681c756b8, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: http, http-opts: {method: GET, path: [/], headers: {Host: [47.243.31.8]}}}
+  - {name: 🇨🇳 中国-7.27MB/s(Youtube:不良林), server: 36.134.154.119, port: 65040, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 36.134.154.119}}
   - {name: 🇯🇵 日本-3.47MB/s(Youtube:不良林), server: 85.208.108.20, port: 6379, type: ss, cipher: aes-256-gcm, password: zDNVedRFPQexG9v}
   - {name: 波兰-471.0KB/s(Youtube:不良林), server: 217.30.10.67, port: 9056, type: ss, cipher: aes-256-cfb, password: rNBfNuuANFCAk7KB}
   - {name: 🇺🇸 美国-2.47MB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-10.26MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.01MB/s(Youtube:不良林)
-      - 🇨🇳 中国-575.8KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.65MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.55MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.46MB/s(Youtube:不良林)
+      - 🇨🇳 中国-231.1KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.44MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活7天)香港-4.26MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.27MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.47MB/s(Youtube:不良林)
       - 波兰-471.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.47MB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-10.26MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.01MB/s(Youtube:不良林)
-      - 🇨🇳 中国-575.8KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.65MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.55MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.46MB/s(Youtube:不良林)
+      - 🇨🇳 中国-231.1KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.44MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活7天)香港-4.26MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.27MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.47MB/s(Youtube:不良林)
       - 波兰-471.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.47MB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-10.26MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.01MB/s(Youtube:不良林)
-      - 🇨🇳 中国-575.8KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.65MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.55MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.46MB/s(Youtube:不良林)
+      - 🇨🇳 中国-231.1KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.44MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活7天)香港-4.26MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.27MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.47MB/s(Youtube:不良林)
       - 波兰-471.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.47MB/s(Youtube:不良林)
@@ -66,17 +66,18 @@ proxy-groups:
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇭🇰 (已存活7天)香港-4.26MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-10.26MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.01MB/s(Youtube:不良林)
-      - 🇨🇳 中国-575.8KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.65MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.55MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.46MB/s(Youtube:不良林)
+      - 🇨🇳 中国-231.1KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.44MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活7天)香港-4.26MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.27MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.47MB/s(Youtube:不良林)
       - 波兰-471.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.47MB/s(Youtube:不良林)
@@ -87,11 +88,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-10.26MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.01MB/s(Youtube:不良林)
-      - 🇨🇳 中国-575.8KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.65MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.55MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.46MB/s(Youtube:不良林)
+      - 🇨🇳 中国-231.1KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.44MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活7天)香港-4.26MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.27MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.47MB/s(Youtube:不良林)
       - 波兰-471.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.47MB/s(Youtube:不良林)
@@ -103,11 +104,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-10.26MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.01MB/s(Youtube:不良林)
-      - 🇨🇳 中国-575.8KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.65MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.55MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.46MB/s(Youtube:不良林)
+      - 🇨🇳 中国-231.1KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.44MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活7天)香港-4.26MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.27MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.47MB/s(Youtube:不良林)
       - 波兰-471.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.47MB/s(Youtube:不良林)
@@ -128,11 +129,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-10.26MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.01MB/s(Youtube:不良林)
-      - 🇨🇳 中国-575.8KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.65MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.55MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.46MB/s(Youtube:不良林)
+      - 🇨🇳 中国-231.1KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.44MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活7天)香港-4.26MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.27MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.47MB/s(Youtube:不良林)
       - 波兰-471.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.47MB/s(Youtube:不良林)
