--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-15.00MB/s(Youtube:不良林), server: trojan-daozhu-uallen-qbit-azure-hk.kinhproxy.com, port: 443, type: trojan, password: trojan-daozhu-uallen-qbit-azure-hk, sni: trojan-daozhu-uallen-qbit-azure-hk.kinhproxy.com, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-10.33MB/s(Youtube:不良林), server: 36.134.154.119, port: 65040, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 36.134.154.119}}
-  - {name: 🇯🇵 日本-3.55MB/s(Youtube:不良林), server: 85.208.108.20, port: 5601, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇨🇳 中国-1.77MB/s(Youtube:不良林), server: best02.downloadmovie.cn, port: 65043, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best02.downloadmovie.cn}}
-  - {name: 🇺🇸 美国-3.46MB/s(Youtube:不良林), server: jgwdb2.gaox.ml, port: 443, type: trojan, password: c19d1432-8b3e-4818-8837-3d160cf65908, sni: jgwdb2.gaox.ml, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-3.47MB/s(Youtube:不良林), server: 85.208.108.20, port: 6379, type: ss, cipher: aes-256-gcm, password: zDNVedRFPQexG9v}
+  - {name: 🇨🇳 中国-231.1KB/s(Youtube:不良林), server: ingress-i1.onebox6.org, port: 38106, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: ingress-i1.onebox6.org}}
+  - {name: 🇨🇦 加拿大-1.33MB/s(Youtube:不良林), server: 196.247.59.154, port: 806, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇳 中国-4.39MB/s(Youtube:不良林), server: auto-moble.downloadmovie.cn, port: 65022, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: auto-moble.downloadmovie.cn}}
+  - {name: 🇺🇸 美国-611.0KB/s(Youtube:不良林), server: 38.68.135.18, port: 4444, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
+  - {name: 🇨🇳 中国-5.69MB/s(Youtube:不良林), server: 116.129.254.177, port: 65037, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
+  - {name: 🇯🇵 日本-3.53MB/s(Youtube:不良林), server: 85.208.108.20, port: 6697, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
   - {name: 波兰-471.0KB/s(Youtube:不良林), server: 217.30.10.67, port: 9056, type: ss, cipher: aes-256-cfb, password: rNBfNuuANFCAk7KB}
   - {name: 🇺🇸 美国-2.47MB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇺🇸 美国-1.32MB/s(Youtube:不良林), server: 5.188.0.151, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇺🇸 美国-1.73MB/s(Youtube:不良林), server: 92.38.176.81, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇺🇸 美国-1.03MB/s(Youtube:不良林), server: 5.188.0.151, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇺🇸 美国-1.36MB/s(Youtube:不良林), server: 92.38.176.81, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-15.00MB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.33MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.55MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.77MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.46MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.47MB/s(Youtube:不良林)
+      - 🇨🇳 中国-231.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.33MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.39MB/s(Youtube:不良林)
+      - 🇺🇸 美国-611.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.69MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.53MB/s(Youtube:不良林)
       - 波兰-471.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.47MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.32MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.73MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.03MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.36MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-15.00MB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.33MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.55MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.77MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.46MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.47MB/s(Youtube:不良林)
+      - 🇨🇳 中国-231.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.33MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.39MB/s(Youtube:不良林)
+      - 🇺🇸 美国-611.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.69MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.53MB/s(Youtube:不良林)
       - 波兰-471.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.47MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.32MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.73MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.03MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.36MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-15.00MB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.33MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.55MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.77MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.46MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.47MB/s(Youtube:不良林)
+      - 🇨🇳 中国-231.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.33MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.39MB/s(Youtube:不良林)
+      - 🇺🇸 美国-611.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.69MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.53MB/s(Youtube:不良林)
       - 波兰-471.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.47MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.32MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.73MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.03MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.36MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-15.00MB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.33MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.55MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.77MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.46MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.47MB/s(Youtube:不良林)
+      - 🇨🇳 中国-231.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.33MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.39MB/s(Youtube:不良林)
+      - 🇺🇸 美国-611.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.69MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.53MB/s(Youtube:不良林)
       - 波兰-471.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.47MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.32MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.73MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.03MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.36MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-15.00MB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.33MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.55MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.77MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.46MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.47MB/s(Youtube:不良林)
+      - 🇨🇳 中国-231.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.33MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.39MB/s(Youtube:不良林)
+      - 🇺🇸 美国-611.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.69MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.53MB/s(Youtube:不良林)
       - 波兰-471.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.47MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.32MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.73MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.03MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.36MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-15.00MB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.33MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.55MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.77MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.46MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.47MB/s(Youtube:不良林)
+      - 🇨🇳 中国-231.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.33MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.39MB/s(Youtube:不良林)
+      - 🇺🇸 美国-611.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.69MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.53MB/s(Youtube:不良林)
       - 波兰-471.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.47MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.32MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.73MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.03MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.36MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-15.00MB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.33MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.55MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.77MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.46MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.47MB/s(Youtube:不良林)
+      - 🇨🇳 中国-231.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.33MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.39MB/s(Youtube:不良林)
+      - 🇺🇸 美国-611.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.69MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.53MB/s(Youtube:不良林)
       - 波兰-471.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.47MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.32MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.73MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.03MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.36MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
