--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,114 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-231.1KB/s(Youtube:不良林), server: ingress-i1.onebox6.org, port: 38106, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: ingress-i1.onebox6.org}}
-  - {name: 🇨🇦 加拿大-1.33MB/s(Youtube:不良林), server: 196.247.59.154, port: 806, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇨🇳 中国-4.39MB/s(Youtube:不良林), server: auto-moble.downloadmovie.cn, port: 65022, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: auto-moble.downloadmovie.cn}}
-  - {name: 🇺🇸 美国-611.0KB/s(Youtube:不良林), server: 38.68.135.18, port: 4444, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
-  - {name: 🇨🇳 中国-5.69MB/s(Youtube:不良林), server: 116.129.254.177, port: 65037, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
-  - {name: 🇯🇵 日本-3.53MB/s(Youtube:不良林), server: 85.208.108.20, port: 6697, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
-  - {name: 波兰-471.0KB/s(Youtube:不良林), server: 217.30.10.67, port: 9056, type: ss, cipher: aes-256-cfb, password: rNBfNuuANFCAk7KB}
-  - {name: 🇺🇸 美国-2.47MB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇺🇸 美国-1.03MB/s(Youtube:不良林), server: 5.188.0.151, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇺🇸 美国-1.36MB/s(Youtube:不良林), server: 92.38.176.81, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 塞浦路斯-1.54MB/s(Youtube:不良林), server: 213.169.137.221, port: 989, type: ss, cipher: aes-256-cfb, password: f8f7aCzcPKbsF8p3}
+  - {name: 🇸🇬 新加坡-2.44MB/s(Youtube:不良林), server: trojan3.udpgw.com, port: 443, type: trojan, password: 8db1b560-019d-11ed-8bdf-1239d0255272, sni: trojan3.udpgw.com, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-1.86MB/s(Youtube:不良林), server: jgwxn3.gaox.ml, port: 443, type: trojan, password: cb43b7c2-b744-41c5-bcc2-fd7467b332cf, sni: jgwxn3.gaox.ml, skip-cert-verify: true}
+  - {name: 🇭🇰 (已存活7天)香港-4.26MB/s(Youtube:不良林), server: 47.243.31.8, port: 51657, type: vmess, uuid: f0eb8855-d3a4-4fc4-98b6-711681c756b8, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: http, http-opts: {method: GET, path: [/], headers: {Host: [47.243.31.8]}}}
+  - {name: 🇺🇸 美国-1.79MB/s(Youtube:不良林), server: 38.68.135.18, port: 8090, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
+  - {name: 🇨🇳 中国-953.7KB/s(Youtube:不良林), server: 111.45.22.136, port: 65023, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 111.45.22.136}}
+  - {name: 🇨🇳 中国-341.2KB/s(Youtube:不良林), server: 120.233.150.146, port: 65082, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 120.233.150.146}}
+  - {name: 🇨🇳 中国-6.20MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
+  - {name: 🇫🇷 法国-1.18MB/s(Youtube:不良林), server: 195.154.200.150, port: 2376, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
+  - {name: 🇯🇵 日本-721.8KB/s(Youtube:不良林), server: 89.31.126.31, port: 809, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-231.1KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.33MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.39MB/s(Youtube:不良林)
-      - 🇺🇸 美国-611.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.69MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.53MB/s(Youtube:不良林)
-      - 波兰-471.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.47MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.03MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.36MB/s(Youtube:不良林)
+      - 塞浦路斯-1.54MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.44MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.86MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活7天)香港-4.26MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.79MB/s(Youtube:不良林)
+      - 🇨🇳 中国-953.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-341.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.20MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.18MB/s(Youtube:不良林)
+      - 🇯🇵 日本-721.8KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-231.1KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.33MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.39MB/s(Youtube:不良林)
-      - 🇺🇸 美国-611.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.69MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.53MB/s(Youtube:不良林)
-      - 波兰-471.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.47MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.03MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.36MB/s(Youtube:不良林)
+      - 塞浦路斯-1.54MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.44MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.86MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活7天)香港-4.26MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.79MB/s(Youtube:不良林)
+      - 🇨🇳 中国-953.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-341.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.20MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.18MB/s(Youtube:不良林)
+      - 🇯🇵 日本-721.8KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-231.1KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.33MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.39MB/s(Youtube:不良林)
-      - 🇺🇸 美国-611.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.69MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.53MB/s(Youtube:不良林)
-      - 波兰-471.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.47MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.03MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.36MB/s(Youtube:不良林)
+      - 塞浦路斯-1.54MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.44MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.86MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活7天)香港-4.26MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.79MB/s(Youtube:不良林)
+      - 🇨🇳 中国-953.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-341.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.20MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.18MB/s(Youtube:不良林)
+      - 🇯🇵 日本-721.8KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇭🇰 (已存活7天)香港-4.26MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-231.1KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.33MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.39MB/s(Youtube:不良林)
-      - 🇺🇸 美国-611.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.69MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.53MB/s(Youtube:不良林)
-      - 波兰-471.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.47MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.03MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.36MB/s(Youtube:不良林)
+      - 塞浦路斯-1.54MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.44MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.86MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活7天)香港-4.26MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.79MB/s(Youtube:不良林)
+      - 🇨🇳 中国-953.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-341.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.20MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.18MB/s(Youtube:不良林)
+      - 🇯🇵 日本-721.8KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-231.1KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.33MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.39MB/s(Youtube:不良林)
-      - 🇺🇸 美国-611.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.69MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.53MB/s(Youtube:不良林)
-      - 波兰-471.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.47MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.03MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.36MB/s(Youtube:不良林)
+      - 塞浦路斯-1.54MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.44MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.86MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活7天)香港-4.26MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.79MB/s(Youtube:不良林)
+      - 🇨🇳 中国-953.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-341.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.20MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.18MB/s(Youtube:不良林)
+      - 🇯🇵 日本-721.8KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-231.1KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.33MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.39MB/s(Youtube:不良林)
-      - 🇺🇸 美国-611.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.69MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.53MB/s(Youtube:不良林)
-      - 波兰-471.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.47MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.03MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.36MB/s(Youtube:不良林)
+      - 塞浦路斯-1.54MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.44MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.86MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活7天)香港-4.26MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.79MB/s(Youtube:不良林)
+      - 🇨🇳 中国-953.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-341.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.20MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.18MB/s(Youtube:不良林)
+      - 🇯🇵 日本-721.8KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-231.1KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.33MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.39MB/s(Youtube:不良林)
-      - 🇺🇸 美国-611.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.69MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.53MB/s(Youtube:不良林)
-      - 波兰-471.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.47MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.03MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.36MB/s(Youtube:不良林)
+      - 塞浦路斯-1.54MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.44MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.86MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活7天)香港-4.26MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.79MB/s(Youtube:不良林)
+      - 🇨🇳 中国-953.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-341.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.20MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.18MB/s(Youtube:不良林)
+      - 🇯🇵 日本-721.8KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
